# hyperfill

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.sh
.claude/commands/: contradictions.md  draft.md  fill.md  go-nogo.md  new.md  parse.md  prebid.md  risks.md  search.md  setup-drive.md  synopsis.md
.toolkit/: README.md  __init__.py  bidder_profile.py  cli.py  docx_builder.py  paths.py  pdf_tools.py  pyproject.toml  xlsx_builder.py
assets/letterhead/: README.md
assets/signature-stamp/: README.md
bids/: README.md
bids/_template/: README.md  checklist.md
company/: README.md  company-info.json
company-knowledge/: README.md  master-data.md  proposal-library.md
company-knowledge/profile/: README.md
company-knowledge/submission-documents/: README.md
company-knowledge/submission-documents/company-documents/: README.md
company-knowledge/submission-documents/experience-proofs/: README.md
company/about/: README.md
company/documents/: README.md
company/experience/: README.md
company/letterhead/: README.md
company/signature/: README.md
docs/: business-proposal-structure.md  conventions.md  knowledge-base.md  repo-structure.md  setup.md  workflow.md
examples/: README.md
skills/rfp-kit/: SKILL.md
skills/rfp-kit/reference/: CLAUDE.md
toolkit/: README.md  __init__.py  bidder_profile.py  cli.py  paths.py  pdf_tools.py
