[project]
name = "claude-rfp-kit"
version = "0.1.0"
description = "A Claude Code framework for generating RFP/RFE/tender responses from a reusable company knowledge base."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "pdfplumber>=0.10",
  "python-docx>=1.1",
  "pypdf>=4.0",
  "Pillow>=10.0",
]

[project.scripts]
rfpkit = "toolkit.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["toolkit"]
